@startuml

title __MYAPPLICATION's Class Diagram__\n

  namespace com.example.myapplication {
    class com.example.myapplication.ChatWindow {
        - chatHistory : ArrayList<String>
        # onCreate()
        - print()
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.ChatWindow.ChatAdapter {
        + ChatAdapter()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.ListItemsActivity {
        {static} # ACTIVITY_NAME : String
        {static} - REQUEST_IMAGE_CAPTURE : int
        + imageClicked()
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onStart()
        # onStop()
        - print()
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.LoginActivity {
        {static} # ACTIVITY_NAME : String
        + onClickLogin()
        # onCreate()
        # onDestroy()
        # onPause()
        # onStart()
        # onStop()
        - validateEmail()
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.MainActivity {
        {static} # ACTIVITY_NAME : String
        + onActivityResult()
        + onClickMain()
        # onCreate()
        # onDestroy()
        # onPause()
        # onStart()
        # onStop()
    }
  }
  

  com.example.myapplication.ChatWindow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.ChatWindow +-down- com.example.myapplication.ChatWindow.ChatAdapter
  com.example.myapplication.ChatWindow.ChatAdapter -up-|> android.widget.ArrayAdapter
  com.example.myapplication.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
